WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213282
REGRESSION (
r255037
): Broken position while comparing watch bands on www.apple.com/shop/studio/apple-watch
https://bugs.webkit.org/show_bug.cgi?id=213282
Summary
REGRESSION (r255037): Broken position while comparing watch bands on www.appl...
Simon Fraser (smfr)
Reported
2020-06-16 22:10:08 PDT
REGRESSION (
r255037
): Broken position while comparing watch bands on www.apple.com/shop/studio/apple-watch
Attachments
Patch
(9.88 KB, patch)
2020-06-16 22:12 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2020-06-16 22:12:32 PDT
Created
attachment 402080
[details]
Patch
Simon Fraser (smfr)
Comment 2
2020-06-16 22:12:35 PDT
<
rdar://problem/63862940
>
EWS
Comment 3
2020-06-16 23:48:16 PDT
Committed
r263137
: <
https://trac.webkit.org/changeset/263137
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 402080
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug