REGRESSION (r255037): Broken position while comparing watch bands on www.apple.com/shop/studio/apple-watch https://bugs.webkit.org/show_bug.cgi?id=213282 Source/WebCore:

Reviewed by Antti Koivisto.

Test: fast/scrolling/ios/user-then-programmatic-scroll.html

* page/scrolling/ScrollingTree.cpp:
(WebCore::ScrollingTree::applyLayerPositionsAfterCommit):
* page/scrolling/ScrollingTree.h:
(WebCore::ScrollingTree::setNeedsApplyLayerPositionsAfterCommit):
(WebCore::ScrollingTree::didScrollByDelegatedScrolling): Deleted.
* page/scrolling/ScrollingTreeScrollingNode.cpp:
(WebCore::ScrollingTreeScrollingNode::wasScrolledByDelegatedScrolling):

Source/WebKit:

<rdar://problem/63862940>

Reviewed by Antti Koivisto.

If a scrolling tree commit has a requested scroll position update for a node, we need
to call applyLayerPositons() to set the UIScrollView's contentOffset.

Often the layer tree commit will contain a boundsOrigin change for the layer in question
(which is equivalent to setting the UIScrollView's contentOffset), but some combinations of
user and programmatic scrolling result in no boundsOrigin change, revealing the bug.

* UIProcess/RemoteLayerTree/ios/ScrollingTreeScrollingNodeDelegateIOS.mm:
(WebKit::ScrollingTreeScrollingNodeDelegateIOS::commitStateAfterChildren):

LayoutTests:

<rdar://problem/63862940>

Reviewed by Antti Koivisto.

* fast/scrolling/ios/user-then-programmatic-scroll-expected.html: Added.
* fast/scrolling/ios/user-then-programmatic-scroll.html: Added.


Canonical link: https://commits.webkit.org/226068@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263137 268f45cc-cd09-0410-ab3c-d52691b4dbfc