Source/WebCore/page/scrolling/ScrollingTree.cpp
@@ -350,9 +350,9 @@ void ScrollingTree::removeAllNodes()
 void ScrollingTree::applyLayerPositionsAfterCommit()
 {
     // Scrolling tree needs to make adjustments only if the UI side positions have changed.
-    if (!m_wasScrolledByDelegatedScrollingSincePreviousCommit)
+    if (!m_needsApplyLayerPositionsAfterCommit)
         return;
-    m_wasScrolledByDelegatedScrollingSincePreviousCommit = false;
+    m_needsApplyLayerPositionsAfterCommit = false;
 
     applyLayerPositions();
 }
